9/26/96 0.21 compatible with V5.65 sendmail log format

9/19/96 0.20 first beta version:

read_mail_log has more command-line options:
 -U filters out users by domain
 -T filters out mail by timestamp
 -o and -i allow cacheing of syslog mail info for fast access
 -m generates a report by delivery, as in
     "foo@localhost sent xxx bytes of mail to bar@near.net"

SyslogScan::Summary can filter by 'other user'
New Get* methods in SyslogScan::Volume
SyslogScan appends "@localhost" to local (unqualified) addresses


8/30/96 0.10 first alpha version