@@ -2,7 +2,7 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
 	NAME => "SyslogScan",
 	DISTNAME => "SyslogScan",
-	VERSION => "0.21",
+	VERSION => "0.23",
 	EXE_FILES => [ qw( read_mail_log.pl ) ],
 	dist => {COMPRESS => 'gzip -9f', SUFFIX => 'gz'},
 );
