@@ -1,3 +1,11 @@
+         0.23:
+
+Allow commas in "stat=" attribute
+Year-guess is asymmetrical (11 months back, 1 month forward)
+New -y year option to read_mail_log.pl
+
+11/18/96 0.22 fix "make test" to work in all time-zones
+
 9/26/96 0.21 compatible with V5.65 sendmail log format
 
 9/19/96 0.20 first beta version:
